--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App{
         background-color: #ffffff;
         min-height: 100vh;
+        font-family: Arial, Helvetica, sans-serif
 }
 .Blender-details{
-        font-size: 25px;
+        font-size: 2.5vw;
         font-weight: 30px;
         text-align: center;
         font-weight: 500;
@@ -31,7 +32,7 @@
         padding-top: 20px;
         padding-bottom: 20px;
         margin-top: 40px;
-        font-size: 17px;
+        font-size: 1.3vw;
         font-weight: 600;
         color: #e60000;
         border-bottom: 1px solid #C8C8C8;
@@ -56,7 +57,7 @@
        margin-top: -5px
 }
 .fa.fa-plus-circle, .fa.fa-minus-circle{
-        font-size: 30px;
+        font-size: 2vw;
         color: #B0B0B0	
 }
 .increament{
@@ -68,31 +69,79 @@
 }
 .shop-section button{
         min-height: 40px;
-        font-size: 20px;
+        font-size:1.5vw;
         color: white;
         max-width: 100%
 }
+.shop-section .col-6{
+        padding: 5px;
+}
+.shop-section .row{
+        margin: -5px;
+}
 #cart-btn{
-        background-color: #e60000;
-        border: none;
+        background: #ff0000;
+	background: -moz-linear-gradient(top,  #f35855 0%, #ff0000 1%, #ff0000 43%,  #ff0000  100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff0000), color-stop(1%,#ff0000), color-stop(43%,#ff0000 ), color-stop(100%,#ff0000 ));
+	background: -webkit-linear-gradient(top,  #f35855 2%,#ec1313ee 1%,#D00000   43%,#D00000  100%);
+	background: -o-linear-gradient(top,  #f35855 2%,#ec1313ee 1%,#D00000   43%,#D00000  100%);
+	background: -ms-linear-gradient(top,  #f35855 2%,#ec1313ee 1%,#D00000  43%,#D00000  100%);
+	background: linear-gradient(top,  #f35855 2%,#ec1313ee 1%,#D00000   43%,#D00000  100%);
+	border: 1px solid #ec1d19e7;
+	color: #ffffff;
+	display: inline-block;
+	line-height: 20px;
+	min-height: 45px;
+	position: relative;
+	text-align: center;
+	text-shadow: 1px 1px 3px rgba(126, 30, 29, 0.75);
+	z-index: 10;
+
+	-moz-user-select: none;
+	-webkit-user-select:none;
+	-khtml-user-select: none;
+	user-select: none;
+	overflow: visible;
+	outline: none;
+
+    -webkit-transition-duration: 0.2s;
+    -moz-transition-duration: 0.2s;
+    transition-duration: 0.2s;
 }
 #pickup-btn{
-        background-color: black;
+       
         border: none;
+          color: #fff; background-color: #000;
+        text-align: center;    line-height: 30px;
+        
+        
+        /*gradient styles*/
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #2f2f2f), color-stop(.5, #1e1f1f), color-stop(.51, #0c0c0c), to(#000));
+        background: -moz-linear-gradient(top, #2f2f2f, #1e1f1f 50%, #0c0c0c 51%, #000);  
+        
+        /*border styles*/
+        border-top: solid 2px #555;
+        border-bottom: solid 2px #111;
+        
+        -moz-box-shadow:inset 0 0 15px #000000;
+        -webkit-box-shadow:inset 0 0 15px #000000;
+        box-shadow:inset 0 0 15px #000000;
 }
 .find-coach{
         text-align: center;
         font-size: 14px;
 }
 .return-title{
-         font-size: 25px;
-         border-right: 1px solid black;
+        font-size:2vw;
+         /* border-right: 1px solid black; */
+}
+.return-section .row{
+        padding: 0px;
 }
 .return-details{
         /* padding-left: 5px;
         margin-left: 5px; */
-        font-size: 11px;
-        font-weight: 600;
+        font-size:0.85vw;
 }
 #get-registry{
         height: 30px;
@@ -116,15 +165,11 @@
         font-size: 13px;
         background-color: #F0F0F0;
 }
-
-.add-to-list, .share{
-
-}
 .return-policy-options, .product-highlights{
         margin-top: 20px;
 }
 .highlights-heading{
-        font-size: 35px;
+        font-size: 2.5vw;
         font-weight: 800;
 }
 .product-list{
@@ -166,11 +211,12 @@
         color: blue
 }
 .pro-con{
-        font-size: 13px;
+        font-size: 0.95vw;
         font-weight: 700;
         padding-top: 20px;
 }
 .pro-con h2{
+        font-size: 1.5vw;
         font-weight: 700;
 }
 .review-details h2{
@@ -179,10 +225,61 @@
 .row.pro-con-row{
         margin-top: 60px;
 }
+/* ratings */
+.rating, .overall-rating {
+        font-size: 22px;
+        color: #e60000
+      }
+.overall-rating{
+        font-size: 35px;
+}
+.con-rating .active{
+        color: #e60000
+}
+.con-rating{
+        font-size: 22px;
+        color: grey
+}
 /* media query */
-/* @media only screen and (max-width: 600px) {
-        .return-policy-options button{
-                min-width: 104px;
-                margin-left: 10px;
-                font-size: 10px
-        } */
+
+@media only screen and (max-width: 600px) {
+        .benefits{
+                font-size: 4vw;
+        }
+        .return-title{
+                font-size:2.5vw;
+                font-weight: 500;
+        }
+        .return-details{
+                /* padding-left: 5px;
+                margin-left: 5px; */
+                font-size:1.8vw;
+        }
+        .round-buttons{
+                margin-top: 0px
+         }
+         .Blender-details{
+                font-size: 4vw;
+        }
+}
+@media only screen and (max-width: 768px) {
+        .return-title{
+                font-size:2.5vw;
+                font-weight: 500
+        }
+        .return-details{
+                /* padding-left: 5px;
+                margin-left: 5px; */
+                font-size:1.8vw;
+        }
+        .benefits{
+                font-size: 2vw;
+        }
+        .round-buttons{
+                margin-top: 0px
+         }
+         .Blender-details{
+                font-size: 3vw;
+        }
+}
+
