--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: Arial, Helvetica, sans-serif
 }
 .flexAndCenter {
   display: flex;
